<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">日日进管理系统</string>

    <!-- 登陆界面 -->
    <string name="user_name">账号:</string>
    <string name="user_pasword">密码:</string>
    <string name="automatic_login">记住账号</string>
    <string name="login">登录</string>
    <string name="title_text">日日进快速业务办理系统</string>
	<string-array name="loan_perido_type">
        <item>22天</item>
        <item>30天 </item>
        <item>月</item>
    </string-array>
    	
</resources>